--- a/app_documento/app/views/presentacions/_form.html.erb
+++ b/app_documento/app/views/presentacions/_form.html.erb
@@ -1,37 +1,50 @@
-<%= form_for(@presentacion) do |f| %>
-  <% if @presentacion.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@presentacion.errors.count, "error") %> prohibited this presentacion from being saved:</h2>
-
-      <ul>
-      <% @presentacion.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :cpe %><br />
-    <%= f.text_field :cpe %>
-  </div>
-  <div class="field">
-    <%= f.label :fecha_vencimiento %><br />
-    <%= f.date_select :fecha_vencimiento %>
-  </div>
-  <div class="field">
-    <%= f.label :empaque %><br />
-    <%= f.text_field :empaque %>
-  </div>
-  <div class="field">
-    <%= f.label :peso_neto %><br />
-    <%= f.number_field :peso_neto %>
-  </div>
-  <div class="field">
-    <%= f.label :peso_escurrido %><br />
-    <%= f.number_field :peso_escurrido %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+<%= semantic_form_for @presentacion do |f| %>
+  <ul>
+    <table class="table_forms">
+      <thead>
+        <tr>
+          <td colspan="2">
+            <h1>
+              <%=flash[:accion]%>
+            </h1>
+          </td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>
+            <%= f.input :cpe, :label => "Nº CPE"%>
+          </td>
+          <td>
+            <%= f.input :fecha_vencimiento, :as => :string, :class=> "date_picker", :label => "Vence" %>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <%= f.input :empaque, :label => "Empaque" %>
+          </td>
+          <td>
+            <%= f.input :peso_neto, :label => "Peso neto"%>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <%= f.input :peso_escurrido, :label => "Peso escurrido"%>
+          </td>
+          <td>
+          </td>
+        </tr>
+        <tr>
+          <td>
+          </td>
+          <td>
+            <%= f.action :submit, :label => flash[:accion] %>
+            <button>
+              <%= link_to 'Volver', :back %>
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </ul>
 <% end %>
