--- a/app_documento/app/views/productos/show.html.erb
+++ b/app_documento/app/views/productos/show.html.erb
@@ -66,7 +66,7 @@
                 <%= button_to 'Agregar importador', new_importador_path, :class =>"button-intab", :method => "get"%>
             <% end %>
                 <ul>
-                  <% @importadores.each do |i|%>
+                  <% @producto.importadors.each do |i|%>
                     <li>
                     <b><%= i.nombre %></b>
                     <% if current_usuario.admin > 0 %>
