--- a/app_documento/app/assets/stylesheets/tramites.css.scss
+++ b/app_documento/app/assets/stylesheets/tramites.css.scss
@@ -1,3 +1,42 @@
 // Place all the styles related to the Tramites controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+$background_color : #5294aa;
+#producto_selected, #tipo_selected{
+    background-color: $background_color;
+}
+
+#new_tramite_table{
+    margin:auto;
+}
+#producto_tramite_wrapper, #tipo_tramite_wrapper {
+    .dataTables_scrollBody{
+        height: 250px !important;
+    }
+    td, th {
+        background-color:#FFF;
+        max-width: 120px;
+        /*Puntos suspensivos*/
+        white-space: nowrap;
+        overflow: hidden;
+        -o-text-overflow: ellipsis;
+        -ms-text-overflow: ellipsis;
+        text-overflow: ellipsis;
+    }
+    tr{
+        cursor: pointer;
+        background-color: #FFF !important;
+        td{
+            width:100%;
+            height: 100%;
+        };
+    }
+    tr :hover{
+        background-color: #CBDFE6;
+    }
+    border: 1px solid $background_color;
+    border-top: 0px;
+    border-radius: 3px;
+
+}
