--- a/app_documento/app/assets/stylesheets/tramites.css.scss
+++ b/app_documento/app/assets/stylesheets/tramites.css.scss
@@ -3,14 +3,12 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 $background_color : #5294aa;
-#producto_selected, #tipo_selected{
-    background-color: $background_color;
-}
 
 #new_tramite_table{
     margin:auto;
+    margin-top: 50px;
 }
-#producto_tramite_wrapper, #tipo_tramite_wrapper {
+#producto_tramite_wrapper, #tipo_tramite_wrapper, {
     .dataTables_scrollBody{
         height: 250px !important;
     }
@@ -25,18 +23,67 @@ $background_color : #5294aa;
         text-overflow: ellipsis;
     }
     tr{
-        cursor: pointer;
-        background-color: #FFF !important;
         td{
-            width:100%;
-            height: 100%;
-        };
-    }
-    tr :hover{
-        background-color: #CBDFE6;
+            cursor: pointer;
+            div{
+                background-color: #FFF;
+            }
+            div:hover{
+                background-color: #CBDFE6;
+            }
+            #producto_selected, #tipo_selected{
+                background-color: $background_color;
+            }
+            #producto_selected:hover, #tipo_selected:hover{
+                background-color: $background_color !important;
+            }
+        }
     }
     border: 1px solid $background_color;
     border-top: 0px;
     border-radius: 3px;
+}
 
+#requisitos_show_wrapper{
+    margin-top: 30px;
+    min-width: 350px;
+    tr.even{
+        background-color: #DCEAEE !important;
+    }
+    td, th {
+        max-width: 120px;
+        /*Puntos suspensivos*/
+        white-space: nowrap;
+        overflow: hidden;
+        -o-text-overflow: ellipsis;
+        -ms-text-overflow: ellipsis;
+        text-overflow: ellipsis;
+    }
+    thead .sorting_asc { 
+        background: url(arrow_up.png) no-repeat center right; 
+    }
+    thead .sorting_desc { 
+        background: url(arrow_down.png) no-repeat center right; 
+    }
+
+    th{
+        border-bottom: 1px solid;
+    }
+}
+#producto_tramite_filter, #tipo_tramite_filter, #requisitos_show_filter{
+  input[type="text"]{
+  background: url(find.png) no-repeat scroll 3px 3px;
+  height: 20px;
+  }
+}
+
+#requisitos_show_filter{
+    width: 100%;
+}
+
+.estados{
+    border:1px; 
+    background:red;
+    float:right;
+    margin-right: 10px;
 }
