ajax para aceptar tramite, falta recargar el html

--- a/app_documento/app/assets/stylesheets/tramites.css.scss
+++ b/app_documento/app/assets/stylesheets/tramites.css.scss
@@ -83,7 +83,10 @@ $background_color : #5294aa;
 
 .estados{
     border:1px; 
-    background:red;
     float:right;
     margin-right: 10px;
+}
+
+#solicitud_tramite_wrapper{
+    width: 616px;
 }
