--- a/app_documento/app/views/tramites/check.html.erb
+++ b/app_documento/app/views/tramites/check.html.erb
@@ -1,4 +1,3 @@
-<table class="area_show" id="area_tramite">
   <tr>
     <td>
       <div class="title_show">
@@ -71,11 +70,11 @@
   <tr>
     <td colspan="2">
       <center>
-        <%= semantic_form_for @tramite, :remote => true, :html => {:class => "accept_form"}, :url => check_tramites_path(:id => @tramite.id) do |f| %>
+        <%= semantic_form_for @tramite, :remote => true, :url => check_tramites_path(:id => @tramite.id) do |f| %>
           <%= f.input :recibido, :as => :hidden, :value => true %>
           <%= f.action :submit, :label => "Aceptar" %>
         <% end %>
-        <%= semantic_form_for @tramite, :remote => true, :html => {:class => "accept_form"}, :url => check_tramites_path(:id => @tramite.id)  do |f|%>
+        <%= semantic_form_for @tramite, :remote => true, :url => check_tramites_path(:id => @tramite.id)  do |f|%>
           <%= f.input :recibido, :as => :hidden, :value => false%>
           <%= f.action :submit,  :label => "Rechazar" %>
         <% end %>
@@ -83,4 +82,4 @@
    </td>
  </tr>
  <% end %>
- </table>
+ <
