--- a/app_documento/app/assets/stylesheets/tramites.css.scss
+++ b/app_documento/app/assets/stylesheets/tramites.css.scss
@@ -3,6 +3,9 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 $background_color : #5294aa;
+$list_even     : #5294AA;
+$list_hover    : #74B6CC;
+$list_selected : #396877; 
 
 #new_tramite_table{
     margin:auto;
@@ -89,4 +92,10 @@ $background_color : #5294aa;
 
 #solicitud_tramite_wrapper{
     width: 616px;
+}
+
+#solicitud_tramite_wrapper, #tipo_tramite_filtro_wrapper{
+  th{
+    border-bottom: 2px solid $list_selected;
+  }
 }
