--- a/app_documento/app/views/inicio/index.html.erb
+++ b/app_documento/app/views/inicio/index.html.erb
@@ -42,53 +42,27 @@
           <thead>
               <th>Nombre</th>
               <th>Producto</th>
-            <% if current_usuario.admin == 1 || current_usuario.admin == 2 %>
-              <th>Usuario</th>
-            <% end %>
+              <% if current_usuario.admin > 0 %>
+                <th>Usuario</th>
+              <% end %>
               <th class="estado">Edo</th>
           </thead>
           <tbody>
+            <% @tablader.each do |elem| %>
             <!-- NOTE: for de las solicitudes -->
             <tr>
-              <td>Solicitud 1</td>
-              <td>Producto 1</td>
+              <% if not elem.recibido %>
+                <td><%= elem.TipoDocumento.descripcion %></td>
+              <% else %>
+                <td><%= link_to elem.TipoDocumento.descripcion, elem %></td>
+              <% end %>
+              <td><%= elem.producto.nombre unless elem.producto.nil? %></td>
               <% if current_usuario.admin > 0 %>
-                <td>Usuario X</td>
+                <td><%= elem.usuario.compania %></td>
               <% end %>
               <td class="estado alerta" title="Por enviar" style="background: white">a</td>
             </tr>
-            <tr>
-              <td>Solicitud 2</td>
-              <td>Producto 2</td>
-              <% if current_usuario.admin > 0 %>
-                <td>Usuario X</td>
-              <% end %>
-              <td class="estado alerta" title="Rechazado" style="background: red">e</td>
-            </tr>
-            <tr>
-              <td>Solicitud 3</td>
-              <td>Producto 3</td>
-              <% if current_usuario.admin > 0 %>
-                <td>Usuario X</td>
-              <% end %>
-              <td class="estado alerta" title="Retrasado" style="background: yellow">i</td>
-            </tr>
-            <tr>
-              <td>Solicitud 4</td>
-              <td>Producto 4</td>
-              <% if current_usuario.admin > 0 %>
-                <td>Usuario X</td>
-              <% end %>
-              <td class="estado alerta" title="Por enviar" style="background: white">a</td>
-            </tr>
-            <tr>
-              <td>Solicitud 5</td>
-              <td>Producto 5</td>
-              <% if current_usuario.admin > 0 %>
-                <td>Usuario X</td>
-              <% end %>
-              <td class="estado alerta" title="Aceptado" style="background: blue">o</td>
-            </tr>
+          <% end %>
           </tbody>
         </table>
       </td>
