--- a/app_documento/app/assets/stylesheets/tramites.css.scss
+++ b/app_documento/app/assets/stylesheets/tramites.css.scss
@@ -47,13 +47,11 @@ $list_selected : #396877;
     border-radius: 3px;
 }
 
-#requisitos_show_wrapper{
+#requisitos_show{
     margin-top: 30px;
     min-width: 350px;
-    tr.even{
-        background-color: #DCEAEE !important;
-    }
     td, th {
+        min-height: 33px;
         max-width: 120px;
         /*Puntos suspensivos*/
         white-space: nowrap;
@@ -62,15 +60,16 @@ $list_selected : #396877;
         -ms-text-overflow: ellipsis;
         text-overflow: ellipsis;
     }
-    thead .sorting_asc { 
-        background: url(arrow_up.png) no-repeat center right; 
-    }
-    thead .sorting_desc { 
-        background: url(arrow_down.png) no-repeat center right; 
-    }
-
     th{
         border-bottom: 1px solid;
+    }
+    td{
+        padding: 0;
+        margin: 0;
+    }
+
+    tr:nth-child(even) {
+        background-color: #DCEAEE;
     }
 }
 #producto_tramite_filter, #tipo_tramite_filter, #requisitos_show_filter{
@@ -85,13 +84,17 @@ $list_selected : #396877;
 }
 
 .estados{
-    border:1px; 
     float:right;
-    margin-right: 10px;
+    margin-right: 20px;
+    width: 15px;
+    height: 15px;
 }
 
 #solicitud_tramite_wrapper{
     width: 616px;
+    tr:nth-child(even) {
+        background-color: #DCEAEE;
+    }
 }
 
 #solicitud_tramite_wrapper, #tipo_tramite_filtro_wrapper{
