Arreglado agregar usuario, modelos con verificaciones

--- a/app_documento/app/views/usuarios/show.html.erb
+++ b/app_documento/app/views/usuarios/show.html.erb
@@ -84,7 +84,7 @@
          <%   when 2 %>
            Super-Admin
          <%   else   %>
-           Contactar servicio
+           Contactar servicio técnico.
          <% end %>
        </td>
        <tr>
