--- a/app_documento/app/views/tramites/show.html.erb
+++ b/app_documento/app/views/tramites/show.html.erb
@@ -69,7 +69,7 @@
 </tr>
 <tr>
   <td>
-<% if current_usuario.admin > 0 %>
+<% if current_usuario.admin > 0  and @tramite.recibido %>
     <button style="padding:10px; margin-left: 30px;">
       <%= link_to 'Editar', edit_tramite_path(@tramite) %>
     </button>
