--- a/app_documento/app/views/tramites/edit.html.erb
+++ b/app_documento/app/views/tramites/edit.html.erb
@@ -1,6 +1,10 @@
 <center>
   <div style="width: 400px;">
-    <h2><%= @tramite.producto.nombre%>: <%= @tramite.TipoDocumento.descripcion %></h2>
+    <% if @tramite.producto%> 
+      <h2><%= @tramite.producto.nombre%>: <%= @tramite.TipoDocumento.descripcion %></h2>
+    <% else %>
+      <h2> Nuevo producto: <%= @tramite.TipoDocumento.descripcion %></h2>
+    <% end %>
   </div>
 </center>
 <div style="height:300px; overflow:auto;">
